# agents-video-pipeline

./: .gitignore  README.md  pyproject.toml
config/: node_mapping.yaml
docs/: 01-architecture-design.md  02-m1-implementation-checklist.md  03-stage-summary-2026-05-20.md  04-mac-onboarding-guide.md
docs/adr/: 001-use-langgraph.md
models/: .gitkeep
scripts/: check_env.py  setup_mac.sh
src/: __init__.py  cli.py  config.py
src/adapters/: __init__.py  asr.py  comfyui.py  compositor_ffmpeg.py  frame_extractor.py  llm.py  sulphur_enhancer.py  tts.py  workflow_template.py
src/agents/: __init__.py  compositor.py  director.py  prompt_smith.py  scriptwriter.py  shot_producer.py  storyboarder.py  subtitle.py  voice.py
src/orchestrator/: __init__.py  graph.py  state.py
src/utils/: __init__.py  locks.py  logging.py
tests/: __init__.py  test_director.py  test_scriptwriter_storyboarder.py  test_shot_producer.py  test_state_schema.py  test_voice_subtitle.py
workflows/: _placeholders.md
